# motionmax

./: 'imageUrl'  .env  .env.example  .gitignore  .gitleaks.toml  360assessment.md  360roadmap.md  ADMIN_REBUILD_CHECKLIST.md  ARCHITECTURE_ASSESSMENT.md  ASSESSMENT_2026-04-12.md  AUDIT.md  AUTOPOST_ENV.md  AUTOPOST_PLAN.md  AUTOPOST_ROADMAP.md  DEPLOYMENT_SECURITY.md  DISASTER_RECOVERY.md  NATIVE_MOBILE_PLAN.md  PIPELINE_PERFORMANCE_REPORT.cmd  PIPELINE_PERFORMANCE_REPORT_V2.cmd  PRICING_PROPOSAL.md  PRODUCTION_AUDIT_REPORT.cmd  PRODUCTION_CHECKLIST_AUTOPOST.md  PRODUCTION_CHECKLIST_EMAIL_NOTIFICATIONS.md  PRODUCTION_CHECKLIST_SUPPORT_FEEDBACK.md  README.md  RESPONSIVE_UX_AUDIT.md  SEO_DISTRIBUTION_PLAN.md  SEO_DISTRIBUTION_ROADMAP.md  TODO.md  UI_UX_AUDIT_REPORT.md  audit.md  base_file.txt  clean-rest.cjs  clean.cjs  clean.py  eslint.config.js  fix-css.ps1  fix-export-idempotent.ps1  fix-final.ps1  fix-logger-bom.ps1  (+20 more)
.claude/: settings.local.json
.github/: dependabot.yml
.husky/: pre-commit
api/: csp-report.ts  tsconfig.json
docs/: phase2-major-triage.md  security-deployment.md  voice-locale-qa-runbook.md
e2e/: README.md  admin.spec.ts  auth.spec.ts  generate.spec.ts  playwright.config.ts
iac/: README.md
marketing/: astro.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
migration/: 004_STORAGE_MIGRATION.md
openapi/: motionmax.v1.yaml
public/: llms.txt  manifest.json  robots.txt  sitemap.xml
runbooks/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/motionmax/: __init__.py  client.py
(+1090 files in other folders)
