[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "motionmax"
version = "0.1.0"
description = "Hand-scaffolded Python client for the MotionMax API (/api/v1)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [{ name = "MotionMax" }]
dependencies = []

[project.urls]
Homepage = "https://app.motionmax.io"

[tool.setuptools.packages.find]
include = ["motionmax*"]
